--- a/cdk/package.json
+++ b/cdk/package.json
@@ -22,6 +22,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.18.0",
+    "@aws-cdk/aws-ecs": "^1.18.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.18.0",
+    "@aws-cdk/aws-iam": "^1.18.0",
+    "@aws-cdk/aws-route53": "^1.18.0",
+    "@aws-cdk/aws-s3": "^1.18.0",
     "@aws-cdk/core": "^1.18.0",
     "source-map-support": "^0.5.16"
   }
