--- a/service/package.json
+++ b/service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aspecto/core": "^1.0.18",
+    "@types/node": "^12.12.14",
     "aws-sdk": "^2.585.0",
     "express": "^4.17.1",
     "ts-node": "^8.5.4",
